# Kimera-Semantics-Instance

./: Dockerfile  README.md  docker-compose-ros-noetic-dev.yaml  kimera_semantics_instance.rosinstall  requirements.txt
interfacer/: CMakeLists.txt  package.xml
interfacer/src/: .kimera_interfacer.cpp  kimera_interfacer.cpp
