<?xml version="1.0"?>
<package format="2">
  <name>interfacer</name>
  <version>1.0.0</version>
  <description>Interfacer for Kimera</description>

  <author email="michele.antonazzi@unimi.it">Michele Antonazzi</author>
  <maintainer email="michele.antonazzi@unimi.it">Michele Antonazzi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>kimera_semantics</depend>
  <depend>kimera_semantics_ros</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
</package>
